--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -77,9 +77,9 @@ jobs:
       working-directory: ./cashier
 
     - name: Upload coverage report
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: coverage-report
+        name: coverage-report-${{ matrix.runs-on }}
         path: cashier/cover/
   build:
     runs-on: ubuntu-latest
