Add some sample configuration for DNScluster - very untested

--- a/deployment/.env.sample
+++ b/deployment/.env.sample
@@ -8,4 +8,8 @@ SECRET_KEY_BASE=your_64_character_secret_key_base_here
 PHX_HOST=localhost
 
 # Optional: Release cookie for distributed Erlang (if needed)
+# WARNING: NOT TESTED!
 # RELEASE_COOKIE=your_release_cookie_here
+# RELEASE_NODE=cashier@my.ip.addr.ess
+# RELEASE_DISTRIBUTION=
+
